terraform/modules/argocd/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${hostname}
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"



  name: argocd
  namespace: argocd
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        backend:
          service:
            name: argo-argocd-server
            port:
              name: https
        pathType: Prefix
  tls:
  - secretName: ${hostname}-tls
    hosts:
      - ${hostname}
